chore: update environment configuration for production setup and add PostgreSQL support

--- a/laravel-backend/.env
+++ b/laravel-backend/.env
@@ -1,15 +1,19 @@
 APP_NAME=BeyondChatsArticles
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:tnGuD8hSnl4wT8ODBDl+RsVdWs9U/9rIUKAB7lZnONU=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=database.sqlite
+DB_CONNECTION=pgsql
+DB_HOST=${DB_HOST}
+DB_PORT=5432
+DB_DATABASE=${DB_DATABASE}
+DB_USERNAME=${DB_USERNAME}
+DB_PASSWORD=${DB_PASSWORD}
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
